--- a/workHours.html
+++ b/workHours.html
@@ -143,10 +143,10 @@
           </ul>
           <ul class="navigation__list">
             <li class="navigation__list-item">
-              <a class="active" href="/news.html">Новости</a>
+              <a href="/news.html">Новости</a>
             </li>
             <li class="navigation__list-item">
-              <a href="/consumers.html">Абонентам</a>
+              <a class="active" href="/consumers.html">Абонентам</a>
             </li>
             <li class="navigation__list-item">
               <a href="#">Документы</a>
@@ -171,21 +171,36 @@
       </div>
     </section>
     <main class="main text">
-      <div class="page__title" style="background-image: url(./images/news/1.jpg)">
+      <div class="page__title">
         <div class="container">
-          <h1 class="heading">Вывоз ТКО</h1>
+          <h1 class="heading">Информация для Абонентов</h1>
         </div>
         <div class="overlay"></div>
       </div>
       <div class="container">
-        <div class="current__news-block">
-          <p>
-            Добрый день! С 29 апреля 2022 года вывоз ТКО на территории г. Яранска, Яранского и
-            Санчурского района осуществляет МУП "Водоканал". По вопросам вывоза ТКО обращаться по
-            номеру телефона 2-22-62 - диспетчер.
-          </p>
-
-          <div class="news__date">28.04.2022</div>
+        <div class="consumers__info">
+          <div class="row">
+            <div class="col-3">
+              <div class="info__nav">
+                <nav>
+                  <ul>
+                    <li><a href="/consumers.html">Способы оплаты</a></li>
+                    <li><a class="active" href="/workHours.html">Режим работы</a></li>
+                    <li><a href="/metersInfo.html">Приборы учета</a></li>
+                    <li><a href="/tarifs.html">Тарифы</a></li>
+                    <li><a href="/feedback.html">Обратная связь</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+            <div class="col">
+              <div class="info__img" style="background-image: url(./images/pages/3.jpg)">
+                <div class="info__title">Режим работы</div>
+                <div class="overlay"></div>
+              </div>
+              3
+            </div>
+          </div>
         </div>
       </div>
     </main>
