--- a/feedback.html
+++ b/feedback.html
@@ -143,10 +143,10 @@
           </ul>
           <ul class="navigation__list">
             <li class="navigation__list-item">
-              <a class="active" href="/news.html">Новости</a>
+              <a href="/news.html">Новости</a>
             </li>
             <li class="navigation__list-item">
-              <a href="/consumers.html">Абонентам</a>
+              <a class="active" href="/consumers.html">Абонентам</a>
             </li>
             <li class="navigation__list-item">
               <a href="#">Документы</a>
@@ -171,21 +171,87 @@
       </div>
     </section>
     <main class="main text">
-      <div class="page__title" style="background-image: url(./images/news/1.jpg)">
+      <div class="page__title">
         <div class="container">
-          <h1 class="heading">Вывоз ТКО</h1>
+          <h1 class="heading">Информация для Абонентов</h1>
         </div>
         <div class="overlay"></div>
       </div>
       <div class="container">
-        <div class="current__news-block">
-          <p>
-            Добрый день! С 29 апреля 2022 года вывоз ТКО на территории г. Яранска, Яранского и
-            Санчурского района осуществляет МУП "Водоканал". По вопросам вывоза ТКО обращаться по
-            номеру телефона 2-22-62 - диспетчер.
-          </p>
+        <div class="consumers__info">
+          <div class="row">
+            <div class="col-3">
+              <div class="info__nav">
+                <nav>
+                  <ul>
+                    <li><a href="/consumers.html">Способы оплаты</a></li>
+                    <li><a href="/workHours.html">Режим работы</a></li>
+                    <li><a href="">Приборы учета</a></li>
+                    <li><a href="/tarifs.html">Тарифы</a></li>
+                    <li><a class="active" href="/feedback.html">Обратная связь</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+            <div class="col">
+              <div class="info__img" style="background-image: url(./images/pages/4.jpg)">
+                <div class="info__title">Обратная связь</div>
+                <div class="overlay"></div>
+              </div>
 
-          <div class="news__date">28.04.2022</div>
+              <div class="feedback__form">
+                <form>
+                  <div class="form__inputs-block">
+                    <div class="input__group">
+                      <div class="input__group-item">
+                        <label>ФИО</label>
+                        <input required type="text" />
+                      </div>
+                      <div class="input__group-item">
+                        <label>Адрес</label>
+                        <input required type="text" />
+                      </div>
+                    </div>
+                    <div class="input__group">
+                      <div class="input__group-item">
+                        <label>Номер телефона</label>
+                        <input required type="text" />
+                      </div>
+                      <div class="input__group-item">
+                        <label>Email</label>
+                        <input required type="text" />
+                      </div>
+                    </div>
+                    <div class="input__group">
+                      <div class="input__group-item">
+                        <textarea rows="5"></textarea>
+                      </div>
+                    </div>
+
+                    <div class="form__agree">
+                      <input
+                        class="form-check-input"
+                        type="checkbox"
+                        name="agree"
+                        id="agree"
+                        required
+                        value="true"
+                      />
+                      <label class="form-check-label" for="agree"
+                        >Нажимая кнопку, я принимаю условия
+                        <a href="#">Пользовательского соглашения</a> и даю своё согласие на
+                        обработку моих персональных данных</label
+                      >
+                    </div>
+                  </div>
+
+                  <div class="form__button">
+                    <button class="button">Отправить</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
