--- a/metersInfo.html
+++ b/metersInfo.html
@@ -198,6 +198,23 @@
                 <div class="info__title">Информация о приборах учета</div>
                 <div class="overlay"></div>
               </div>
+              <div class="info__block">
+                <h2>Уважаемые абоненты!</h2>
+                <p>
+                  Доводим до Вашего сведения о необходимости проведения поверки приборов учета
+                  холодной воды.
+                </p>
+                <p>
+                  Дата следующей поверки каждого счетчика указана в ежемесячной квитанции за ЖКУ и в
+                  личном кабинете, через который передаются показания. Поверку нужно сделать до этой
+                  даты. Но обычно необходимость поверки обнаруживается при невозможности передать
+                  показания счетчика как раз из-за истечения межповерочного интервала. Ничего
+                  страшного: после поверки возможность передачи показаний снова появится. Если вам
+                  звонят и сообщают о необходимости сделать поверку счетчика, лучше не соглашаться.
+                  Сначала проверьте дату поверки в счете за ЖКУ или личном кабинете. И если поверка
+                  действительно необходима, сами выбирайте фирму.
+                </p>
+              </div>
             </div>
           </div>
         </div>
