--- a/workHours.html
+++ b/workHours.html
@@ -198,7 +198,12 @@
                 <div class="info__title">Режим работы</div>
                 <div class="overlay"></div>
               </div>
-              3
+              <div class="info__block">
+                <p>Адрес: 612260, г. Яранск, ул. Кирова, 36</p>
+                <p>Телефон: 8 (3852) 500-101 - Диспетчер</p>
+                <p>Электронная почта: vodokanal.yaransk@yandex.ru</p>
+                <p>Режим работы: Понедельник — четверг: 8.00 - 17.00 Пятница: 8.00 - 16.00</p>
+              </div>
             </div>
           </div>
         </div>
