--- a/contacts.html
+++ b/contacts.html
@@ -25,6 +25,7 @@
 
     <script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" defer></script>
+    <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
 
     <script src="js/common.js" defer></script>
   </head>
@@ -199,14 +200,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="contacts__info-item">
-                <iframe
-                  src="https://yandex.ru/map-widget/v1/?um=constructor%3A7921077592d2b1ad9ac0bf69582b891728154fe4c8746414b0e408cd9aef9428&amp;source=constructor"
-                  width="100%"
-                  height="400"
-                  frameborder="0"
-                ></iframe>
-              </div>
+              <div id="contacts__map" class="contacts__info-item"></div>
             </div>
           </div>
         </div>
