--- a/currentNews.html
+++ b/currentNews.html
@@ -173,7 +173,7 @@
     <main class="main text">
       <div class="page__title" style="background-image: url(./images/news/1.jpg)">
         <div class="container">
-          <h1 class="heading">Вывоз ТКО</h1>
+          <h1 class="heading heading-bg">Вывоз ТКО</h1>
         </div>
         <div class="overlay"></div>
       </div>
