--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" defer></script>
+    <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript" defer></script>
     <script src="js/common.js" defer></script>
   </head>
 
@@ -176,19 +177,29 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <div class="slide"><img src="./images/slider/1.jpg" alt="" /></div>
+              <div class="slide">
+                <img class="swiper-lazy" src="./images/slider/1.jpg" alt="" />
+              </div>
             </div>
             <div class="swiper-slide">
-              <div class="slide"><img src="./images/slider/2.jpg" alt="" /></div>
+              <div class="slide">
+                <img class="swiper-lazy" src="./images/slider/2.jpg" alt="" />
+              </div>
             </div>
             <div class="swiper-slide">
-              <div class="slide"><img src="./images/slider/3.jpg" alt="" /></div>
+              <div class="slide">
+                <img class="swiper-lazy" src="./images/slider/3.jpg" alt="" />
+              </div>
             </div>
             <div class="swiper-slide">
-              <div class="slide"><img src="./images/slider/4.jpg" alt="" /></div>
+              <div class="slide">
+                <img class="swiper-lazy" src="./images/slider/4.jpg" alt="" />
+              </div>
             </div>
             <div class="swiper-slide">
-              <div class="slide"><img src="./images/slider/5.jpg" alt="" /></div>
+              <div class="slide">
+                <img class="swiper-lazy" src="./images/slider/5.jpg" alt="" />
+              </div>
             </div>
             ...
           </div>
@@ -196,8 +207,8 @@
           <!-- <div class="swiper-pagination"></div> -->
 
           <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          <!-- <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div> -->
 
           <!-- If we need scrollbar -->
           <!-- <div class="swiper-scrollbar"></div> -->
@@ -391,7 +402,7 @@
             </div>
             <div class="col-lg-7">
               <div class="meters__form">
-                <form id="metersForm">
+                <form action="" id="metersForm">
                   <div class="form__inputs-block">
                     <div class="input__group">
                       <div class="input__group-item">
