--- a/index.html
+++ b/index.html
@@ -106,37 +106,80 @@
 		<section class="services">
 			<div class="container">
 				<div class="services__wrapper">
-					<div class="services__row row">
-						<div class="services__row-item box">
-							<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
-							<p class="item__title">Плановые отключения водоснабжения</p>
+
+						<div class="services__row">
+							<div class="services__item-wrapper">
+								<div data-box class="services__row-item box">
+									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<p class="item__title">Плановые отключения водоснабжения</p>
+								</div>
+								<div class="item__description box">
+									<h3>								Уважаемые Абоненты!
+									</h3>
+									<p>
+										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:
+									</p>
+								</div>
+							</div>
+
+							<div class="services__item-wrapper">
+								<div data-box class="services__row-item box">
+									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<p class="item__title">Плановые отключения водоснабжения</p>
+								</div>
+								<div class="item__description box">
+									<h3>								Уважаемые Абоненты!
+									</h3>
+									<p>
+										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:
+									</p>
+								</div>
+							</div>
+
+							<div class="services__row-item services__row-item--full box">
+								<p class="item__title">Передача показаний индивидуальных приборов учета</p>
+								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
+								<button class="button">Передать показания  </button>
+							</div>
 						</div>
-						<div class="services__row-item box">
-							<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
-							<p class="item__title">Способы оплаты квитвнций</p>
+
+						<div class="services__row">
+							<div class="services__row-item services__row-item--full box">
+								<p class="item__title">Передача показаний индивидуальных приборов учета</p>
+								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
+								<button class="button">Передать показания  </button>
+							</div>
+
+							<div class="services__item-wrapper">
+								<div data-box class="services__row-item box">
+									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<p class="item__title">Плановые отключения водоснабжения</p>
+								</div>
+								<div class="item__description box">
+									<h3>								Уважаемые Абоненты!
+									</h3>
+									<p>
+										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:
+									</p>
+								</div>
+							</div>
+
+							<div class="services__item-wrapper">
+								<div data-box class="services__row-item box">
+									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<p class="item__title">Плановые отключения водоснабжения</p>
+								</div>
+								<div class="item__description box">
+									<h3>								Уважаемые Абоненты!
+									</h3>
+									<p>
+										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:
+									</p>
+								</div>
+							</div>
 						</div>
-						<div class="services__row-item services__row-item--full box">
-							<p class="item__title">Передача показаний индивидуальных приборов учета</p>
-							<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
-							<button class="button">Передать показания  </button>
-						</div>
-					</div>
-					<div class="services__row row">
-						<div class="services__row-item services__row-item--full box">
-							<p class="item__title">Передача показаний индивидуальных приборов учета</p>
-							<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
-							<button class="button">Передать показания  </button>
-						</div>
-						<div class="services__row-item box">
-							<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
-							<p class="item__title">Плановые отключения водоснабжения</p>
-						</div>
-						<div class="services__row-item box">
-							<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
-							<p class="item__title">Способы оплаты квитвнций</p>
-						</div>
-					</div>
 				</div>
+
 			</div>
 		</section>
 
