--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	<main>
 
-		<section class="first__screen" style="background-image: url('/images/main/1.webp">
+		<section class="first__screen" style="background-image: url('/images/main/1.webp')">
 			<div class="first__screen-content container">
 				<div class="first__screen-title">
 					<h1>Крупнейшее предприятие на территории Яранского района</h1>
@@ -107,106 +107,63 @@
 			<div class="container">
 				<div class="services__wrapper">
 
-<!--						<div class="services__row">-->
-<!--							<div class="services__item-wrapper">-->
-<!--								<div data-box class="services__row-item tl box">-->
-<!--									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">-->
-<!--									<p class="item__title">Плановые отключения водоснабжения</p>-->
-<!--								</div>-->
-<!--								<div class="item__description">-->
-<!--									<h3>								Уважаемые Абоненты!-->
-<!--									</h3>-->
-<!--									<p>-->
-<!--										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:-->
-<!--									</p>-->
-<!--								</div>-->
-<!--							</div>-->
-
-<!--							<div class="services__item-wrapper">-->
-<!--								<div data-box class="services__row-item box">-->
-<!--									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">-->
-<!--									<p class="item__title">Плановые отключения водоснабжения</p>-->
-<!--								</div>-->
-<!--								<div class="item__description box">-->
-<!--									<h3>								Уважаемые Абоненты!-->
-<!--									</h3>-->
-<!--									<p>-->
-<!--										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:-->
-<!--									</p>-->
-<!--								</div>-->
-<!--							</div>-->
-
-<!--							<div class="services__row-item tr services__row-item&#45;&#45;full box">-->
-<!--								<p class="item__title">Передача показаний индивидуальных приборов учета</p>-->
-<!--								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>-->
-<!--								<button class="button">Передать показания  </button>-->
-<!--							</div>-->
-<!--						</div>-->
-
-<!--						<div class="services__row">-->
-<!--							<div class="services__row-item bl services__row-item&#45;&#45;full box">-->
-<!--								<p class="item__title">Передача показаний индивидуальных приборов учета</p>-->
-<!--								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>-->
-<!--								<button class="button">Передать показания  </button>-->
-<!--							</div>-->
-
-<!--							<div class="services__item-wrapper">-->
-<!--								<div data-box class="services__row-item br box">-->
-<!--									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">-->
-<!--									<p class="item__title">Плановые отключения водоснабжения</p>-->
-<!--								</div>-->
-<!--								<div class="item__description box">-->
-<!--									<h3>								Уважаемые Абоненты!-->
-<!--									</h3>-->
-<!--									<p>-->
-<!--										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:-->
-<!--									</p>-->
-<!--								</div>-->
-<!--							</div>-->
-
-<!--							<div class="services__item-wrapper">-->
-<!--								<div data-box class="services__row-item box">-->
-<!--									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">-->
-<!--									<p class="item__title">Плановые отключения водоснабжения</p>-->
-<!--								</div>-->
-<!--								<div class="item__description box">-->
-<!--									<h3>								Уважаемые Абоненты!-->
-<!--									</h3>-->
-<!--									<p>-->
-<!--										На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:-->
-<!--									</p>-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</div>-->
-
-					<div class="tabs__wrapper">
-						<div class="tabs__container">
-							<nav class="tabs">
-								<ul>
-									<li><a href="#tab1">
-										1
-									</a></li>
-									<li><a href="#tab2">
-										2
-									</a></li>
-									<li><a href="#tab3">
-										3
-									</a></li>
-								</ul>
-							</nav>
-							<div class="tabs__content">
-								<div id="tab1"  class="tabs__item box">
-									<p>tab1</p>
+						<div class="services__row">
+							<div data-target="payments" class="services__row-item box">
+									<img src="images/icons/payments.svg" alt="" class="item__icon">
+									<p class="item__title">Способы оплаты квитанций</p>
 								</div>
-								<div id="tab2" class="tabs__item box" >
-									<p>tab2</p>
+							<div data-target="works" class="services__row-item box">
+									<img src="images/icons/works.svg" alt="" class="item__icon">
+									<p class="item__title">Отключение водоснабжения</p>
 								</div>
-								<div id="tab3"  class="tabs__item box">
-									<p>tab3</p>
-								</div>
+							<div class="services__row-item tr services__row-item--full box">
+								<p class="item__title">Передача показаний индивидуальных приборов учета</p>
+								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
+								<button class="button">Передать показания  </button>
 							</div>
 						</div>
-					</div>
+
+						<div class="services__row">
+							<div class="services__row-item bl services__row-item--full box">
+								<p class="item__title">Передача показаний индивидуальных приборов учета</p>
+								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
+								<button class="button">Передать показания  </button>
+							</div>
+							<div data-target="meters" class="services__row-item br box">
+									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<p class="item__title">Регистрация приборов учета</p>
+								</div>
+							<div data-target class="services__row-item box">
+									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<p class="item__title">Плановые отключения водоснабжения</p>
+								</div>
+						</div>
+
+						<div class="services__content">
+							<div class="services__content-col">
+								<div data-box="payments" class="services__content-col__item box">
+									<button class="close__btn">+</button>
+									<h2>Уважаемые Абоненты!
+										</h2>
+									<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
+								</div>
+
+								<div data-box="works" class="services__content-col__item box">
+									<button class="close__btn">+</button>
+									<h2>Уважаемые Абоненты!
+									</h2>
+									<p>На данный момент работ на сетях водоснабжения не проводится</p>
+								</div>
+
+								<div data-box="meters" class="services__content-col__item box">
+									<button class="close__btn">+</button>
+									<h2>Уважаемые Абоненты!
+									</h2>
+									<p>На данный момент работ на сетях водоснабжения не проводится</p>
+								</div>
+							</div>
+							<div class="services__content-col"></div>
+						</div>
 
 				</div>
 
