--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
     </div>
     <div class="header__main">
         <div class="header__main-body container">
-            <a href="/index.html" class="header__main-logo">
+            <a href="index.html" class="header__main-logo">
                 <img src="./images/icons/logo.svg" alt="logo" class="logo image">
             </a>
             <nav class="header__main-navigation">
