--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 		</div>
 		<div class="header__main">
 			<div class="header__main-body container">
-				<a href="#" class="header__main-logo">
+				<a href="index.html" class="header__main-logo">
 					<img src="./images/icons/logo.svg" alt="logo" class="logo image">
 				</a>
 				<nav class="header__main-navigation">
 					<ul class="header__navigation-list">
 						<li class="header__navigation-list__item"><a href="">О предприятии</a></li>
-						<li class="header__navigation-list__item"><a href="/news.html">Новости</a></li>
+						<li class="header__navigation-list__item"><a href="news.html">Новости</a></li>
 						<li class="header__navigation-list__item"><a href="">Абонентам</a></li>
 						<li class="header__navigation-list__item"><a href="">Документы</a></li>
-						<li class="header__navigation-list__item"><a href="">Контакты</a></li>
+						<li class="header__navigation-list__item"><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -109,11 +109,11 @@
 
 						<div class="services__row">
 							<div data-target="payments" class="services__row-item box">
-									<img src="images/icons/payments.svg" alt="" class="item__icon">
+									<img src="images/icons/payments.svg" alt="" draggable="false" class="item__icon">
 									<p class="item__title">Способы оплаты квитанций</p>
 								</div>
 							<div data-target="works" class="services__row-item box">
-									<img src="images/icons/works.svg" alt="" class="item__icon">
+									<img src="images/icons/works.svg" alt="" draggable="false" class="item__icon">
 									<p class="item__title">Отключение водоснабжения</p>
 								</div>
 							<div class="services__row-item tr services__row-item--full box">
@@ -127,45 +127,62 @@
 							<div class="services__row-item bl services__row-item--full box">
 								<p class="item__title">Передача показаний индивидуальных приборов учета</p>
 								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
-								<button class="button">Передать показания  </button>
+								<button class="button">Передать показания</button>
 							</div>
 							<div data-target="meters" class="services__row-item br box">
-									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+									<img src="images/icons/meterIcon.svg" alt="" draggable="false" class="item__icon">
 									<p class="item__title">Регистрация приборов учета</p>
 								</div>
-							<div data-target class="services__row-item box">
-									<img src="images/icons/meterIcon.svg" alt="" class="item__icon">
+							<div data-target="a" class="services__row-item box">
+									<img src="images/icons/meterIcon.svg" alt="" draggable="false" class="item__icon">
 									<p class="item__title">Плановые отключения водоснабжения</p>
 								</div>
 						</div>
 
 						<div class="services__content">
-							<div class="services__content-col">
-								<div data-box="payments" class="services__content-col__item box">
-									<button class="close__btn">+</button>
-									<h2>Уважаемые Абоненты!
+
+								<div data-box="payments" class="services__content-item tl box">
+									<div class="item__body">
+										<button class="close__btn">+</button>
+										<h2 class="item__title">Уважаемые Абоненты!
 										</h2>
-									<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
+										<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
+									</div>
 								</div>
 
-								<div data-box="works" class="services__content-col__item box">
-									<button class="close__btn">+</button>
-									<h2>Уважаемые Абоненты!
-									</h2>
-									<p>На данный момент работ на сетях водоснабжения не проводится</p>
+								<div data-box="works" class="services__content-item tr box">
+									<div class="item__body">
+										<button class="close__btn">+</button>
+										<h2 class="item__title">Уважаемые Абоненты!
+										</h2>
+										<p>На данный момент работ на сетях водоснабжения не проводится</p>
+									</div>
 								</div>
 
-								<div data-box="meters" class="services__content-col__item box">
-									<button class="close__btn">+</button>
-									<h2>Уважаемые Абоненты!
-									</h2>
-									<p>На данный момент работ на сетях водоснабжения не проводится</p>
+
+
+
+								<div data-box="meters" class="services__content-item bl box">
+									<div class="item__body">
+										<button class="close__btn">+</button>
+										<h2 class="item__title">Уважаемые Абоненты!
+										</h2>
+										<p>На данный момент работ на сетях водоснабжения не проводится</p>
+									</div>
+								</div>
+
+								<div data-box="a" class="services__content-item br box">
+									<div class="item__body">
+										<button class="close__btn">+</button>
+										<h2 class="item__title">Уважаемые Абоненты!
+										</h2>
+										<p>На данный момент работ на сетях водоснабжения не проводится</p>
+									</div>
 								</div>
 							</div>
-							<div class="services__content-col"></div>
 						</div>
 
-				</div>
+
 
 			</div>
 		</section>
@@ -199,7 +216,7 @@
 					</div>
 				</div>
 				<div class="news__more">
-					<button class="button">Все новости</button>
+					<a href="news.html" class="button">Все новости</a>
 				</div>
 			</div>
 		</section>
