--- a/news.html
+++ b/news.html
@@ -37,8 +37,8 @@
     </div>
     <div class="header__main">
         <div class="header__main-body container">
-            <a href="/index.html" class="header__main-logo">
-                <img src="./images/icons/logo.svg" alt="logo" class="logo image">
+            <a href="index.html" class="header__main-logo">
+                <img src="images/icons/logo.svg" alt="logo" class="logo image">
             </a>
             <nav class="header__main-navigation">
                 <ul class="header__navigation-list">
